I'm adding to my readme and I added the image growing effect noted in the acceptance criteria

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <!--banner image with text-->
     <figure class="banner">
-        <img src="./assets/images/mah_face.jpg">
+        <img src="./assets/images/mah_face.jpg" alt="A picture of my face.">
         <p>City Skyline Page</p>
     </figure>
     <!--main section with content-->
@@ -43,6 +43,7 @@
             <h1>About</h1>
             <h1>Me</h1>
             </div>
+            <!--For now, I'm leaving this as lorem ipsum text-->
             <div class="container-content">
             <p>I'm baby umami master cleanse swag iceland. Schlitz yr stumptown williamsburg. Four dollar toast glossier distillery wayfarers, bespoke echo park photo booth dreamcatcher food truck. Salvia edison bulb farm-to-table biodiesel. Fam intelligentsia disrupt cliche. Fixie sartorial sriracha farm-to-table venmo lomo.</p>
             <p>Chillwave pork belly semiotics ugh hella kitsch gentrify poutine health goth vinyl four dollar toast sustainable celiac drinking vinegar hammock. Distillery skateboard tacos hoodie. Gluten-free celiac schlitz selvage shaman. Lomo locavore swag, food truck forage ugh lyft selfies.</p>
@@ -51,35 +52,35 @@
         <div class="container-header" id="work">
             <h1>Work</h1>
         </div>
-            <div class="content">
+            <div class="content" id="firstChild">
                 <div class="inner-container">
-                    <div id=item1>
+                    <div class="item">
                         <a href=# target="_blank">
-                        <img src="./assets/images/mount_rainier.jpg">
+                        <img src="./assets/images/mount_rainier.jpg" alt="A picture of Mount Rainier.">
                         </a>
                         <p>Mount Rainier Watch </p>
                     </div>
-                    <div class ="item2">
+                    <div class ="item">
                         <a href=# target="_blank">
-                        <img src="./assets/images/ws_ferry.jpg">
+                        <img src="./assets/images/ws_ferry.jpg" alt="A picture of the WA state ferry.">
                         </a>
                         <p>Ferry schedule App</p>
                     </div>
-                    <div class ="item2">
+                    <div class ="item">
                         <a href=# target="_blank">
-                        <img src="./assets/images/amtrak.jpeg">
+                        <img src="./assets/images/amtrak.jpeg" alt="A picture of the train.">
                         </a>
                         <p>Amtrack Cascades App</p>
                     </div>
-                    <div class ="item2">
+                    <div class ="item">
                         <a href=# target="_blank">
-                        <img src="./assets/images/i5.jpg">
+                        <img src="./assets/images/i5.jpg" alt="A picture of I5 with traffic">
                         </a>
                         <p>Traffic Monitor</p>
                     </div>
-                    <div class ="item2">
+                    <div class ="item">
                         <a href=# target="_blank">
-                        <img src="./assets/images/light_rail.jpg">
+                        <img src="./assets/images/light_rail.jpg" alt="a picture of the light rail.">
                         </a>
                         <p>Light Rail Map</p>
                     </div>
