adding actual links to my projects and resume, as well as adding a real about me paragraph

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>First Portfolio</title>
+    <title>First Web Development Portfolio</title>
 </head>
 <body>
     <!--header code-->
@@ -26,7 +26,7 @@
                         <a href=#contactMe>Contact Me</a>
                     </li>
                     <li>
-                        <a href=# target="_blank">R&eacute;sum&eacute;</a>
+                        <a href="https://1drv.ms/w/s!AkQu0QXxkSn5dSIeZlFBAUwewF8?e=fWVtMq" target="_blank">R&eacute;sum&eacute;</a>
                     </li>
                 </ul>
             </div>
@@ -34,7 +34,7 @@
     <!--banner image with text-->
     <figure class="banner">
         <img src="./assets/images/mah_face.jpg" alt="A picture of my face.">
-        <p>City Skyline Page</p>
+        <p>A web development portfolio</p>
     </figure>
     <!--main section with content-->
     <main>
@@ -45,8 +45,7 @@
             </div>
             <!--For now, I'm leaving this as lorem ipsum text-->
             <div class="container-content">
-            <p>I'm baby umami master cleanse swag iceland. Schlitz yr stumptown williamsburg. Four dollar toast glossier distillery wayfarers, bespoke echo park photo booth dreamcatcher food truck. Salvia edison bulb farm-to-table biodiesel. Fam intelligentsia disrupt cliche. Fixie sartorial sriracha farm-to-table venmo lomo.</p>
-            <p>Chillwave pork belly semiotics ugh hella kitsch gentrify poutine health goth vinyl four dollar toast sustainable celiac drinking vinegar hammock. Distillery skateboard tacos hoodie. Gluten-free celiac schlitz selvage shaman. Lomo locavore swag, food truck forage ugh lyft selfies.</p>
+            <p>I consider myself a critical thinker, adept in the acquisition and application of foreign language. I enjoy the process of seeking creative solutions to complex problems. I have a strong sense of urgency and consider my work ethic to be one of my utmost strengths. My goal is to implement my newly learned skills in web development to become a junior developer or enter a position with comparative requirements in terms of specialized technical knowledge.</p>
         </div>
    <!--Work section with nested grid and content-->
         <div class="container-header" id="work">
@@ -55,35 +54,35 @@
             <div class="content" id="firstChild">
                 <div class="inner-container">
                     <div class="item">
-                        <a href=# target="_blank">
-                        <img src="./assets/images/mount_rainier.jpg" alt="A picture of Mount Rainier.">
+                        <a href="https://jmarq019.github.io/weather_dashboard/" target="_blank">
+                        <img src="./assets/images/weather_screenshot.png" alt="A screenshot of my weather dashboard page.">
                         </a>
-                        <p>Mount Rainier Watch </p>
+                        <p>Weather Dashboard </p>
                     </div>
                     <div class ="item">
-                        <a href=# target="_blank">
-                        <img src="./assets/images/ws_ferry.jpg" alt="A picture of the WA state ferry.">
+                        <a href="https://jmarq019.github.io/day_planner/" target="_blank">
+                        <img src="./assets/images/day_planner.png" alt="A screenshot of my day planner page.">
                         </a>
-                        <p>Ferry schedule App</p>
+                        <p>Day Planner Page </p>
                     </div>
                     <div class ="item">
-                        <a href=# target="_blank">
-                        <img src="./assets/images/amtrak.jpeg" alt="A picture of the train.">
+                        <a href="https://jmarq019.github.io/passkey_generator/" target="_blank">
+                        <img src="./assets/images/password_generator.png" alt="A screenshot of my password generator page">
                         </a>
-                        <p>Amtrack Cascades App</p>
+                        <p>Password Generator Page </p>
                     </div>
                     <div class ="item">
-                        <a href=# target="_blank">
-                        <img src="./assets/images/i5.jpg" alt="A picture of I5 with traffic">
+                        <a href="https://jmarq019.github.io/pop_quiz/" target="_blank">
+                        <img src="./assets/images/pop_quiz_demo.png" alt="A screenshot of my quiz page">
                         </a>
-                        <p>Traffic Monitor</p>
+                        <p>Quiz Page </p>
                     </div>
-                    <div class ="item">
+                    <!-- <div class ="item">
                         <a href=# target="_blank">
                         <img src="./assets/images/light_rail.jpg" alt="a picture of the light rail.">
                         </a>
                         <p>Light Rail Map</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -97,8 +96,6 @@
                     <li><a href="tel+13343431213">334-343-1213</a></li>
                     <li><a href="mailto:jmarq19@outlook.com">jmarq19@outlook.com</a></li>
                     <li><a href="https://github.com/jmarq019" target="_blank">Github</a></li>
-                    <li><a href=# target="_blank">Twitter</a></li>
-                    <li><a href=# target="_blank">Spotify</a></li>
                 </ul>
             </div>
 
