updating my portfolio

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <!--For now, I'm leaving this as lorem ipsum text-->
             <div class="container-content">
-            <p>I consider myself a critical thinker, adept in the acquisition and application of foreign language. I enjoy the process of seeking creative solutions to complex problems. I have a strong sense of urgency and consider my work ethic to be one of my utmost strengths. My goal is to implement my newly learned skills in web development to become a junior developer or enter a position with comparative requirements in terms of specialized technical knowledge.</p>
+            <p>I consider myself a critical thinker, adept in the acquisition and application of foreign language. I enjoy the process of seeking creative solutions to complex problems. I have a strong sense of urgency and consider my work ethic to be one of my utmost strengths. My goal is to implement my newly learned skills in web development to become a junior developer or enter a position with comparative requirements in terms of specialized technical knowledge. My skillset includes Object oriented programming, Javascript, Node.js, Node-Express, MySQL and Handlebars</p>
         </div>
    <!--Work section with nested grid and content-->
         <div class="container-header" id="work">
@@ -53,6 +53,18 @@
         </div>
             <div class="content" id="firstChild">
                 <div class="inner-container">
+                    <div class="item">
+                        <a href="https://jorgeminitechblog.herokuapp.com/" target="_blank">
+                        <img src="./assets/images/tech_blog_screenshot.png" alt="A screenshot of my weather dashboard page.">
+                        </a>
+                        <p>Tech Blog - Full stack app</p>
+                    </div>
+                    <div class="item">
+                        <a href="https://manatee-clicker.herokuapp.com/" target="_blank">
+                        <img src="./assets/images/manatee_clicker_screenshot.png" alt="A screenshot of my weather dashboard page.">
+                        </a>
+                        <p>Manatee Clicker - Full stack app</p>
+                    </div>
                     <div class="item">
                         <a href="https://jmarq019.github.io/weather_dashboard/" target="_blank">
                         <img src="./assets/images/weather_screenshot.png" alt="A screenshot of my weather dashboard page.">
@@ -77,12 +89,6 @@
                         </a>
                         <p>Quiz Page </p>
                     </div>
-                    <!-- <div class ="item">
-                        <a href=# target="_blank">
-                        <img src="./assets/images/light_rail.jpg" alt="a picture of the light rail.">
-                        </a>
-                        <p>Light Rail Map</p>
-                    </div> -->
                 </div>
             </div>
 
